...
    LIGHT("Light"),
    DARK("Dark")
}

@Serializable
enum class AidenFontSize(val title: String, val scaleFactor: Float) {
    SMALL("Small", 0.9f),
    MEDIUM("Default", 1.0f),
    LARGE("Large", 1.15f),
    EXTRA_LARGE("Extra Large", 1.3f)
}

@Serializable
enum class AidenDiffMarkerOption(val title: String) {
    SYMBOLS("Symbols and color"),
...
